--- a/xbalaz15/src/main/resources/com/javaprojekt/sequence-diagram.fxml
+++ b/xbalaz15/src/main/resources/com/javaprojekt/sequence-diagram.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,51 +10,109 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="SideApp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="1324.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javaprojekt.SequenceDiagramController">
-    <center>
-        <ScrollPane fx:id="sequenceDiagram" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-            <content>
-                <AnchorPane fx:id="rootPane" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-            </content>
-        </ScrollPane>
-    </center>
-    <top>
-        <GridPane fx:id="Menu" prefHeight="46.0" prefWidth="1324.0" BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="183.0" minWidth="10.0" prefWidth="183.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="249.0" minWidth="10.0" prefWidth="201.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="171.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="161.0" minWidth="10.0" prefWidth="138.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="182.0" minWidth="10.0" prefWidth="140.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="350.0" minWidth="10.0" prefWidth="238.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="160.0" minWidth="10.0" prefWidth="143.0" />
-                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="108.0" />
-            </columnConstraints>
-            <rowConstraints>
+<BorderPane fx:id="SideApp" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="795.0" prefWidth="1324.0" stylesheets="@sqApp-css.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javaprojekt.SequenceDiagramController">
+   <center>
+      <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab fx:id="tab" text="Seq. Diagram1">
+               <content>
+                  <AnchorPane fx:id="drawPane" prefHeight="200.0" prefWidth="200.0" />
+               </content>
+            </Tab>
+            <Tab text="Seq. Diagram2">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram3">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram4">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram5">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram6">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram7">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram8">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+            <Tab text="Seq. Diagram9">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              </content>
+            </Tab>
+        </tabs>
+      </TabPane>
+   </center>
+   <left>
+      <AnchorPane fx:id="tabAnchorPane" prefHeight="764.0" prefWidth="149.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane fx:id="borderPane" alignment="CENTER" prefHeight="764.0" prefWidth="157.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Button fx:id="ClassDiagram" mnemonicParsing="false" onAction="#SwitchToClassDiagram" text="Class diagram">
-                    <font>
-                        <Font size="16.0" />
-                    </font>
-                </Button>
-                <Button fx:id="Save" mnemonicParsing="false" onAction="#SaveJson" text="Save" GridPane.columnIndex="6">
-                    <font>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                      <Button fx:id="ClassDiagram" alignment="CENTER" mnemonicParsing="false" onAction="#SwitchToClassDiagram" text="Class diagram" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                          <font>
+                              <Font size="16.0" />
+                          </font>
+                      </Button>
+                      <Button fx:id="Save" mnemonicParsing="false" onAction="#SaveJson" text="Save" GridPane.halignment="CENTER" GridPane.rowIndex="11" GridPane.valignment="CENTER">
+                          <font>
+                              <Font size="15.0" />
+                          </font>
+                      </Button>
+                      <Button fx:id="Load" mnemonicParsing="false" onAction="#LoadJson" text="Load" GridPane.halignment="CENTER" GridPane.rowIndex="12">
+                          <font>
+                              <Font size="15.0" />
+                          </font>
+                      </Button>
+                  <Button mnemonicParsing="false" onAction="#InsertClass" text="Add class" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+                     <font>
                         <Font size="15.0" />
-                    </font>
-                </Button>
-                <Button fx:id="Load" mnemonicParsing="false" onAction="#LoadJson" text="Load" GridPane.columnIndex="7">
-                    <font>
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" onAction="#Help" text="Help" GridPane.halignment="CENTER" GridPane.rowIndex="10">
+                     <font>
                         <Font size="15.0" />
-                    </font>
-                </Button>
-            <Button fx:id="Next" mnemonicParsing="false" onAction="#SwitchToNextSeqDiagram" text="Next" GridPane.columnIndex="1">
-               <font>
-                  <Font size="15.0" />
-               </font>
-            </Button>
-            </children>
-        </GridPane>
-    </top>
+                     </font>
+                  </Button>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
+   </left>
 </BorderPane>
